<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">


    <Space
        android:layout_width="match_parent"
        android:layout_height="110dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/loginTV_click_app_logo_to_guest"
        android:textAlignment="center"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/downscaled_splashscreen_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="launchMenu"
        android:src="@drawable/downscaled_splashscreen_logo"
        android:transitionName="logo_image" />

    <TextView
        android:id="@+id/loginTV_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/loginTV_welcome"
        android:textColor="@color/blackColor"
        android:textSize="42sp"
        android:transitionName="logo_text" />

    <TextView
        android:id="@+id/loginTV_please_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/loginTV_please_sign_in_to_continue"
        android:textSize="18sp"
        android:transitionName="logo_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginET_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginTV_username_hint"
            android:transitionName="username_tran"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginET_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/loginTV_password_hint"
            android:transitionName="password_tran"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/loginBTN_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/appThemeColor"
            android:fontFamily="@font/antic"
            android:onClick="launchMenu"
            android:text="@string/loginBTN_login"
            android:textColor="@color/whiteColor"
            android:transitionName="login_button_tran" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/loginBTN_forgot_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:background="@color/appThemeColor"
                android:elevation="0dp"
                android:fontFamily="@font/antic"
                android:text="@string/loginBTN_forgot_password_hint"
                android:textColor="@color/whiteColor" />

            <Button
                android:id="@+id/loginBTN_go_to_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@color/appThemeColor"
                android:elevation="0dp"
                android:fontFamily="@font/antic"
                android:text="@string/loginBTN_new_user"
                android:textColor="@color/whiteColor"
                android:transitionName="login_signup_tran" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>