<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp"/>

        <RelativeLayout
            android:id="@+id/dashboard_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/appThemeColor">

            <ImageView
                android:id="@+id/dashboard_logo_downscaled_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/downscaled_splashscreen_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/dashboard_logo_downscaled_image"
                android:fontFamily="@font/bungee"
                android:padding="10dp"
                android:text="BENCHMARK"
                android:textAlignment="center"
                android:id="@+id/dashboardTV_benchmark"
                android:textColor="@color/whiteColor"
                android:textSize="36sp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dashboard_userprofile_image"
                android:layout_below="@id/dashboardTV_benchmark"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:clickable="true"
                android:onClick="lauchUserProfile"
                android:id="@+id/dashboardIB_userprofile_image"/>
<!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Logged in as:"
                android:textColor="#fff"
                android:textSize="12sp"
                android:id="@+id/logged_in_as_textview"
                android:layout_above="@+id/dashboard_userprofile_image"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Alex Oprea"
                android:fontFamily="@font/bungee"
                android:textColor="#fff"
                android:textSize="14sp"
                android:layout_above="@id/logged_in_as_textview"
                android:layout_alignParentEnd="true"
                android:padding="5dp"/>-->

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-25dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dashboardBTN_start_benchmark"
                android:text="@string/dashboardBTN_start_benchmark"
                android:textColor="@color/appThemeColor"
                android:textSize="13sp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dashboardBTN_benchmark_results"
                android:text="@string/dashboardBTN_benchmark_results"
                android:textColor="@color/appThemeColor"
                android:textSize="13sp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dashboardBTN_performance_analysis"
                android:text="@string/dashboardBTN_performance_analysis"
                android:textColor="@color/appThemeColor"
                android:textSize="13sp"/>

        </LinearLayout>





    </LinearLayout>

</ScrollView>